# arduino-cmake-oversized-image

./: .gitignore  CMakeLists.txt  compile.sh
src/: Arlifile  Arlifile.cmake  CMakeLists.txt  NeoCube.cpp  NeoCube.h
